# wooly-mask-detector

./: README.md  pyproject.toml
wooly_mask_detector/: mask_classifier.py  mask_detector.py
wooly_mask_detector/helpers/: training.py
